# stfm

./: Cargo.toml  Dockerfile  README.md
assets/: hello.txt
src/: app.rs  example.rs  files.rs  main.rs  ui.rs
