[package]
name = "stfm"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.0", features = ["derive"] }
color-eyre = "0.6.3"
ratatui = { version = "0.28.0", features = ["all-widgets", "crossterm", "macros"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
